backend/test_oauth_user_password_rejected.txt
   Compiling kalamdb-server v0.2.0 (/Users/jamal/git/KalamDB/backend)
error[E0583]: file not found for module `test_schema_consolidation`
  --> backend/tests/misc/schema/mod.rs:19:1
   |
19 | mod test_schema_consolidation;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `test_schema_consolidation`, create file "backend/tests/misc/schema/test_schema_consolidation.rs" or "backend/tests/misc/schema/test_schema_consolidation/mod.rs"
   = note: if there is a `mod test_schema_consolidation` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `test_unified_types`
  --> backend/tests/misc/schema/mod.rs:20:1
   |
20 | mod test_unified_types;
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `test_unified_types`, create file "backend/tests/misc/schema/test_unified_types.rs" or "backend/tests/misc/schema/test_unified_types/mod.rs"
   = note: if there is a `mod test_unified_types` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `test_manifest_cache`
  --> backend/tests/misc/storage/mod.rs:18:1
   |
18 | mod test_manifest_cache;
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `test_manifest_cache`, create file "backend/tests/misc/storage/test_manifest_cache.rs" or "backend/tests/misc/storage/test_manifest_cache/mod.rs"
   = note: if there is a `mod test_manifest_cache` elsewhere in the crate already, import it with `use crate::...` instead

For more information about this error, try `rustc --explain E0583`.
error: could not compile `kalamdb-server` (test "test_misc") due to 3 previous errors
